Resolve linting issues